--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "main": "src/server.js",
   "scripts": {
-    "dev": "node --env-file=.env --watch src/server.js",
+    "dev": "node --watch src/server.js",
     "start": "node src/server.js"
   },
   "engines": {
