--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^6.26.2",
+    "recharts": "^3.3.0",
     "three": "^0.181.0"
   },
   "devDependencies": {
